--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '14'
-      - uses: DeLaGuardo/setup-clojure@1.0
+      - uses: DeLaGuardo/setup-clojure@master
         with:
           tools-deps: '1.10.1.507'
       - run: clojure -A:uberjar
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '14'
-      - uses: DeLaGuardo/setup-clojure@1.0
+      - uses: DeLaGuardo/setup-clojure@master
         with:
           tools-deps: '1.10.1.507'
       - run: clojure -A:uberjar
