--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -15,6 +15,7 @@ jobs:
           tools-deps: '1.10.1.507'
       - run: clojure -A:uberjar
       - run: jpackage @jpackage/common @jpackage/linux
+      - run: ls -l
       - uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
