--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -41,7 +41,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: Image Organizer-1.0.dmg
+          asset_path: image-organizer-1.0.dmg
           asset_name: image-organizer.dmg
           asset_content_type: application/x-apple-diskimage
   build-exe:
@@ -59,6 +59,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: Image Organizer-1.0.exe
+          asset_path: image-organizer-1.0.exe
           asset_name: image-organizer.exe
           asset_content_type: application/vnd.microsoft.portable-executable
